# SCOWTT-customer-propensity-prediction

./: .gitignore  README.md  main.py  pyproject.toml
__MACOSX/: ._datasets
data_reports/: Feature_Engineering.xlsx  olist_customers_dataset_report.html  olist_order_items_dataset_report.html  olist_order_payments_dataset_report.html  olist_order_reviews_dataset_report.html  olist_orders_dataset_report.html  olist_products_dataset_report.html  product_category_name_translation_report.html  product_category_translation_report.html
notebooks/: 01_data_exploration.ipynb  02A_feature_engineering.ipynb  02B_feature_engineering.ipynb  02_feature_engineering.ipynb  03A_modelling.ipynb  03B_modelling.ipynb  03_modelling.ipynb  04A_inference.ipynb  04B_inference.ipynb
